# house_price_prediction_xgboost

./: banglore house prce.ipynb  index.html  main.py  model.joblib  pyproject.toml  trail.json
templates/: index.html
