[project]
name = "b-house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",  
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2"
]
